# hypospray

./: Cargo.toml  DEVELOPMENT.md  README.md
examples/: car.rs
examples/car/: engine.rs  engine_gran_cabrio_v8.rs  main.rs  module.rs  sports_car.rs
extensions/: Cargo.toml
extensions/src/: lib.rs  modifiers.rs
extensions/src/decorator/: bind.rs  mod.rs
extensions/src/modifier/: inject.rs  mod.rs
extensions/src/modifiers/: bind.rs  implements.rs  inject.rs  mod.rs
src/: component.rs  lib.rs
src/core/: co.rs  component.rs  component_imp.rs  construct.rs  construct_fn.rs  mod.rs
src/graph/: ext.rs  mod.rs
src/graph_co/: cache.rs  component_key.rs  dyn.rs  graph.rs  mod.rs
src/lifecycle/: mod.rs  prototype.rs  singleton.rs
src/ownership/: lifetime.rs  mod.rs
src/registry/: cache.rs  graph.rs  mod.rs
tests/: lib.rs
tests/extensions/: mod.rs
tests/trait_obj/: mod.rs
tests/trait_obj/reference/: engine_component.rs  mod.rs  v8_engine.rs  vehicle.rs
